--- a/CP4 HTML.html
+++ b/CP4 HTML.html
@@ -1,19 +1,79 @@
-<! doctype html>
+<!doctype html>
 <html>
 <head>
 <title>Page Title</title>
 </head>
 
-
-<body>
-	<center>
+<body background="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/ICS_Quebec.svg/2000px-ICS_Quebec.svg.png">
 	
-	<h1> ANTONIO BARRAFATO</h1>
+	<h1 align= "center"> <big><em>COMPUTER PROGRAMMING 2016</em></big></h1>
+	<h2 align= "left"> <small><hr> Teacher = Mr Degano </hr></small></h2>
+	
+	<img src="http://cdn.someecards.com/posts/jimmy-fallon-donald-trump-hair-fu4.png"
+		  align = "right" style= "width:500px;height:270px;">
+	
+	<h3 align= "left"> <small><strong> Class 4D </strong></small></h3>
+	<h4 align= "left"> <ins>Personal Info</ins> </h4>
+	 
+	 
+<b>	
+	<p> 
+		<h5> <ins> Unordered List </ins> </h5>
+			<ul>
+				<li>NAME = Antonio Barrafato</li><br/>
+				<li>SCHOOL = <i>Loyola High School</li></i><br/>
+				<li>CELL = 514-918-5625</li><br/>
+				<li>PLACE OF BIRTH = Montreal, Canada</li>
+			</ul>
+	</p>
+	
+	<p>
+		<h6> <ins> Ordered List </ins> </h6>
+			<ol>
+				<li>NAME = Antonio Barrafato</li><br/>
+				<li>SCHOOL = <i>Loyola High School</li></i><br/>
+				<li>CELL = 514-918-5625</li><br/>
+				<li>PLACE OF BIRTH = Montreal, Canada</li>
+			</ol>
+	</p>
+	
+	
+</b>
+<!-- this will make a table -->
+	<table  style= "width:50%"
+		<tr>
+			<th>First Name<th>
+			<th>Last Name</th>
+			<th>Age</th>
+		</tr>
+		<tr>
+			<td>Antonio</td>
+			<td>Barrafato</td>
+			<td>15</td>
+		</tr>
+		<tr>
+			<td>Matthew</td>
+			<td>Parthimos</td>
+			<td>16</td>
+		</tr>
+	</table>
+	
+	<div align="right" style="backgorund-color:black;color:black;padding:20px;">
+		<p>
+			Baseball is my favorite <sub> sport </sub> but also do enjoy playing <sup> hockey </sup><br/>
+			Although i also play <ins> football </ins> which is also a great sport. <br/>
+		</p>
+	
+		<p>
+			My favorite color is yellow but i also really like green,<br> 
+			<del> Black </del> is such a boring shade.
+		</p>
+	</div>
+	
+	
+	
+	
 		
-    <img src="Flirting-GIFS.gif" width= "250" length= "250"  
 	
-	background="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/ICS_Quebec.svg/2000px-ICS_Quebec.svg.png"
-	
-	</center>
-
+</body>
 </html>
