--- a/CP4 HTML.html
+++ b/CP4 HTML.html
@@ -51,7 +51,7 @@
 			<td>Barrafato</td>
 			<td>15</td>
 		</tr>
-		<tr>
+		<tr> <!-- got parthimos' permission-->
 			<td>Matthew</td>
 			<td>Parthimos</td>
 			<td>16</td>
