--- a/CP4 HTML.html
+++ b/CP4 HTML.html
@@ -5,13 +5,46 @@
 </head>
 
 <body background="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/ICS_Quebec.svg/2000px-ICS_Quebec.svg.png">
-	
+
 	<h1 align= "center"> <big><em>COMPUTER PROGRAMMING 2016</em></big></h1>
-	<h2 align= "left"> <small><hr> Teacher = Mr Degano </hr></small></h2>
 	
-	<img src="http://cdn.someecards.com/posts/jimmy-fallon-donald-trump-hair-fu4.png"
+	<button type="button" align="left" onclick="alert('I am test button 1')"> Button 1</button>
+	<button type="button" align="left" onclick="alert('I am test button 2')"> Button 2</button>
+	<button type="button" align="left" onclick="alert('I am test button 3')"> Button 3</button>
+	<button type="button" align="left" onclick="alert('I am test button 4')"> Button 4</button>
+	<button type="button" align="left" onclick="alert('I am test button 5')"> Button 5</button>
+		
+	<hr> </hr>
+	
+
+	<form>
+		Username:<br>
+			<input type="text" name="Antonio"><br>
+		Password:<br>
+			<input type="password" name="Barrafato"><br><br>
+			<input type="submit" value="submit">
+			
+		<img src="http://cdn.someecards.com/posts/jimmy-fallon-donald-trump-hair-fu4.png"
 		  align = "right" style= "width:500px;height:270px;">
+		  
+	</form>
 	
+	
+	
+	<form>
+		<input type="radio" name="gender" value="Male" checked> Male<br>
+		<input type="radio" name="gender" value="Female" checked> Female<br>
+		<input type="radio" name="gender" value="Gender Neutral" checked> Gender Neutral<br>
+		<input type="submit" value="submit"> 
+	</form>
+	
+	<form>
+		<input align="right" type="checkbox" name="test1" value="Test"> this is a test<br>
+		<input align="right" type="checkbox" name="test2" value="Test"> this is a test 2<br>
+		<input align="right" type="submit" value="submit">
+	</form>
+	
+	<h2 align= "left"> <small> Teacher = Mr Degano </small></h2>
 	<h3 align= "left"> <small><strong> Class 4D </strong></small></h3>
 	<h4 align= "left"> <ins>Personal Info</ins> </h4>
 	 
@@ -51,14 +84,10 @@
 			<td>Barrafato</td>
 			<td>15</td>
 		</tr>
-		<tr> <!-- got parthimos' permission-->
-			<td>Matthew</td>
-			<td>Parthimos</td>
-			<td>16</td>
-		</tr>
+		
 	</table>
 	
-	<div align="right" style="backgorund-color:black;color:black;padding:20px;">
+	<div align="center" style="backgorund-color:black;color:black;padding:20px;">
 		<p>
 			Baseball is my favorite <sub> sport </sub> but also do enjoy playing <sup> hockey </sup><br/>
 			Although i also play <ins> football </ins> which is also a great sport. <br/>
@@ -66,7 +95,7 @@
 	
 		<p>
 			My favorite color is yellow but i also really like green,<br> 
-			<del> Black </del> is such a boring shade.
+			<del> Black </del> is such a boring.
 		</p>
 	</div>
 	
